# SlimeRadar

./: CMakeLists.txt  README.md  bench_opt.c  build_cuda.sh  build_cuda_linux.sh  build_linux.sh  compare.sh  regress.sh  regress_cuda.sh
.bak_opt/: bench_phases.c  cpu_search.c  slime.h
src/: cpu_search.c  cpu_simd.h  cpu_simd_avx2.c  cuda_host.c  cuda_search.cu  cuda_search.h  cuda_stub.c  main.c  slime.h  slime_ref.c  slimerander.h
